# krep

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh  krep_tray.service
.github/workflows/: ci.yml
cardio_cli/: Cargo.toml
cardio_cli/src/: main.rs
cardio_cli/tests/: concurrency_tests.rs  corruption_recovery_tests.rs  integration.rs  integration_tests.rs
cardio_cli/tests/integration/: milestone_45.rs
cardio_core/: Cargo.toml
cardio_core/src/: catalog.rs  config.rs  csv_rollup.rs  engine.rs  error.rs  history.rs  lib.rs  logging.rs  progression.rs  state.rs  strength.rs  types.rs  wal.rs
cardio_tray/: Cargo.toml
cardio_tray/src/: main.rs
cardio_watch/: Package.swift
cardio_watch/Sources/CardioCore/: Catalog.swift  Engine.swift  Progression.swift  Types.swift
cardio_watch/Tests/CoreTests/: CatalogTests.swift  EngineTests.swift  ProgressionTests.swift
docs/: ADDING_EXERCISES.md  DEVELOPER.md  USAGE.md  WATCH_IMPLEMENTATION.md
