[workspace]
resolver = "2"
members = [
    "cardio_core",
    "cardio_cli",
    "cardio_tray",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jawaad Mahmood"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
thiserror = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File operations
fs2 = "0.4"
csv = "1.3"
dirs = "5.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# GTK/Tray (Linux)
gtk4 = { version = "0.9", package = "gtk4" }
libadwaita = { version = "0.7", package = "libadwaita" }
gio = "0.20"
glib = "0.20"
open = "5"
ksni = "0.2"

# Testing
tempfile = "3.12"

# Performance
once_cell = "1.19"
