[package]
name = "cardio_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cardio_core = { path = "../cardio_core" }
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile.workspace = true
serde_json.workspace = true
