[package]
name = "cardio_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "krep"
path = "src/main.rs"

[dependencies]
cardio_core = { path = "../cardio_core" }
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile.workspace = true
serde_json.workspace = true

[package.metadata.deb]
maintainer = "Krep Developers"
depends = "libgtk-4-1, libadwaita-1-0"
assets = [
    ["target/release/krep", "usr/bin/", "755"],
    ["target/release/krep-tray", "usr/bin/", "755"],
    ["assets/krep.png", "usr/share/icons/hicolor/48x48/apps/krep.png", "644"],
    ["krep_tray.service", "usr/lib/systemd/user/krep_tray.service", "644"]
]
