[package]
name = "cardio_tray"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cardio_core = { path = "../cardio_core" }
gtk4.workspace = true
libadwaita.workspace = true
gio.workspace = true
glib.workspace = true
open.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs.workspace = true
serde_json.workspace = true
ksni = "0.2"
gtk3 = { package = "gtk", version = "0.14" }
